--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,7 @@
 .headline {
 	width: 1000px;
 	height: 36px;
-	background: #191970;
+	background: #00008B;
 	color: #ffffff;
 	text-indent: 60px;
 	font-size: 17px !important;
