--- a/css/home.css
+++ b/css/home.css
@@ -1,10 +1,10 @@
 .headline {
 	width: 1000px;
-	height: 46px;
+	height: 36px;
 	background: #00008B;
-	color: #ffffff;
+	color: #F8F8FF;
 	text-indent: 30px;
-	font-size: 25px !important;
+	font-size: 17px !important;
 	font-family: Arimo, sans-serif;
 	font: bold 33px "Open Sans", sans-serif;
 }
