--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,7 @@
 	color: #F8F8FF;
 	text-indent: 48px;
 	font-size: 17px !important;
-	font-family: Arimo, sans-serif;
+	font-family: arial, sans-serif;
 	font: bold 33px "Open Sans", sans-serif;
 }
 
