--- a/css/home.css
+++ b/css/home.css
@@ -444,3 +444,87 @@ a {
 	color: #000000;
 }
 .particularsVideo{max-width: 900px;text-align: center;}
+
+
+/* Bio */
+#bio
+{
+  display: block;
+  width: 80%;
+  background: #FFF;
+  min-width: 500px;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding-top: 10px;
+  padding-right: 0px;
+  padding-bottom: 10px;
+  padding-left: 0px;
+  text-align: justify;
+}
+
+/* Bio image */
+.bio_img
+{
+  display: block;
+  
+  margin-top: 20px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+	
+  /*border-style: solid;
+  border-width: 1px;
+  border-color: red;*/
+}
+
+/* Bio image */
+.bio_img img
+{
+  display: inline-block;
+  vertical-align: middle;
+  width: 26%;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+}
+
+/* Bio introduction */
+.bio_intro
+{ 
+  display: inline-block;
+  vertical-align: middle;
+	
+  /*border-style: solid;
+  border-width: 1px;
+  border-color: blue;*/
+	
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 15px;
+	
+  width: 70%;
+}
+
+/* Bio introduction h1 */
+.bio_intro h1
+{ 	
+  font-style: normal; /* h1: always bold by default */
+  font-size: 150%;
+  font-family: 'century gothic', arial;
+	
+  /*border-style: solid;
+  border-width: 1px;
+  border-color: green;*/
+	
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;	
+  padding-top: 10px;
+  padding-right: 0px;
+  padding-bottom: 15px;
+  padding-left: 0px;
+  color: #555;
+}
