--- a/css/home.css
+++ b/css/home.css
@@ -532,3 +532,20 @@ a {
 p
 { font: 'trebuchet ms', arial, sans-serif;
   line-height: 1.5em;}
+
+p.list_new
+{
+  font-size:10pt;
+  line-height:8pt;
+  font-style: bold;
+  color:#EE2C2C;
+}
+
+p.gallery
+{
+  font-size:10pt;
+  line-height:5pt;
+  font-style: bold;
+  color:#EE2C2C;
+  margin: 0px 0px;
+}
