--- a/css/home.css
+++ b/css/home.css
@@ -471,9 +471,9 @@ a {
   margin-bottom: 0px;
   margin-left: 0px;
 	
-  /*border-style: solid;
+  border-style: solid;
   border-width: 1px;
-  border-color: red;*/
+  border-color: red;
 }
 
 /* Bio image */
