--- a/css/home.css
+++ b/css/home.css
@@ -521,9 +521,9 @@ a {
   font-size: 150%;
   font-family: 'century gothic', arial;
 	
-  /*border-style: solid;
+  border-style: solid;
   border-width: 1px;
-  border-color: green;*/
+  border-color: green;
 	
   margin-top: 0px;
   margin-right: 0px;
