--- a/css/home.css
+++ b/css/home.css
@@ -538,7 +538,9 @@ a {
 
 p
 { font: 'trebuchet ms', arial, sans-serif;
-  line-height: 1.3em;}
+  line-height: 1.3em;
+  margin: 0.5em 0em 0.5em 0em
+}
 
 p.list_new
 {
