--- a/css/home.css
+++ b/css/home.css
@@ -539,7 +539,11 @@ a {
 p
 { font: 'trebuchet ms', arial, sans-serif;
   line-height: 1.3em;
-  margin: 0.5em 0em 0.5em 0em
+  margin: 0.5em 0em 0.5em 0em;
+
+  border-style: solid;
+  border-width: 1px;
+  border-color: red;
 }
 
 p.list_new
