--- a/css/home.css
+++ b/css/home.css
@@ -461,9 +461,9 @@ a {
   padding-left: 0px;
   text-align: justify;
 	
-  border-style: solid;
+  /*border-style: solid;
   border-width: 1px;
-  border-color: green;
+  border-color: green;*/
 }
 
 /* Bio image */
@@ -475,9 +475,9 @@ a {
   margin-bottom: 0px;
   margin-left: 0px;
 	
-  border-style: solid;
+  /*border-style: solid;
   border-width: 1px;
-  border-color: red;
+  border-color: red;*/
 }
 
 /* Bio image */
@@ -491,9 +491,9 @@ a {
   margin-bottom: 0px;
   margin-left: 0px;
 	
-  border-style: solid;
+  /*border-style: solid;
   border-width: 1px;
-  border-color: yellow;
+  border-color: yellow;*/
 }
 
 /* Bio introduction */
@@ -502,9 +502,9 @@ a {
   display: inline-block;
   vertical-align: middle;
 	
-  border-style: solid;
+  /*border-style: solid;
   border-width: 1px;
-  border-color: blue;
+  border-color: blue;*/
 	
   margin-top: 0px;
   margin-right: 0px;
@@ -521,9 +521,9 @@ a {
   font-size: 150%;
   font-family: 'century gothic', arial;
 	
-  border-style: solid;
+  /*border-style: solid;
   border-width: 1px;
-  border-color: green;
+  border-color: green;*/
 	
   margin-top: 0px;
   margin-right: 0px;
@@ -541,9 +541,9 @@ p
   line-height: 1.3em;
   margin: 0.5em 0em 0.5em 0em;
 
-  border-style: solid;
+  /*border-style: solid;
   border-width: 1px;
-  border-color: red;
+  border-color: red;*/
 }
 
 p.list_new
