--- a/css/home.css
+++ b/css/home.css
@@ -540,6 +540,7 @@ p
 { font: 'trebuchet ms', arial, sans-serif;
   line-height: 1.3em;
   margin: 0.5em 0em 0.5em 0em;
+  color: #555；
 
   /*border-style: solid;
   border-width: 1px;
