--- a/css/home.css
+++ b/css/home.css
@@ -17,6 +17,10 @@
 
 .container {
 	background: #FFFFFF;
+	
+	border-style: solid;
+        border-width: 1px;
+        border-color: red;
 }
 
 .header {
