--- a/css/common.css
+++ b/css/common.css
@@ -108,6 +108,10 @@ body{
 	background-size: cover;
 	overflow: hidden;
 	margin: 0 auto;
+	
+	border-style: solid;
+        border-width: 1px;
+        border-color: blue;
 }
 
 
