--- a/css/home.css
+++ b/css/home.css
@@ -7,6 +7,10 @@
 	font-size: 17px !important;
 	font-family: arial, sans-serif;
 	font: bold 33px "Open Sans", sans-serif;
+	
+	border-style: solid;
+        border-width: 4px;
+        border-color: yellow;
 }
 
 .headline a {
