--- a/css/home.css
+++ b/css/home.css
@@ -8,9 +8,9 @@
 	font-family: arial, sans-serif;
 	font: bold 33px "Open Sans", sans-serif;
 	
-	border-style: solid;
+	/* border-style: solid;
         border-width: 4px;
-        border-color: yellow;
+        border-color: yellow; */
 }
 
 .headline a {
