--- a/css/common.css
+++ b/css/common.css
@@ -109,9 +109,9 @@ body{
 	overflow: hidden;
 	margin: 0 auto;
 	
-	border-style: solid;
+	/* border-style: solid;
         border-width: 4px;
-        border-color: blue;
+        border-color: blue; */
 }
 
 
