--- a/css/home.css
+++ b/css/home.css
@@ -22,9 +22,9 @@
 .container {
 	background: #FFFFFF;
 	
-	border-style: solid;
+	/* border-style: solid;
         border-width: 2px;
-        border-color: red;
+        border-color: red; */
 }
 
 .header {
