--- a/css/home.css
+++ b/css/home.css
@@ -144,12 +144,12 @@ a {
 /*发表*/
 
 .publications-content {
-	padding-top: 20px;
+	padding-top: 100px;
 	padding-bottom: 60px;
 	
 	border-style: solid;
         border-width: 2px;
-        border-color: red;
+        border-color: blue;
 }
 
 .list-content {
