--- a/css/home.css
+++ b/css/home.css
@@ -156,6 +156,36 @@ a {
 	margin-top: 40px;
 }
 
+.list-content h1
+{
+  font-style: bold;
+  font-size: 160%;
+  font-family: 'century gothic', arial, sans-serif;
+	
+  /*border-style: solid;
+  border-width: 2px;
+  border-color: green;*/
+ 
+  border-left: solid;
+  border-width: 1px;
+  /*border-color: #e7e7e7;*/
+  border-color: #555;
+	
+  background: #f5f5f5; 
+	
+  margin-top: 20px;
+  margin-right: 0px;
+  margin-bottom: 10px;
+  margin-left: 0px;
+	
+  padding-top: 10px;
+  padding-right: 3px;
+  padding-bottom: 10px;
+  padding-left: 8px;
+	
+  color: #595959;
+}
+
 .list-content img {
 	margin-left: 0px;
 }
