--- a/css/home.css
+++ b/css/home.css
@@ -159,7 +159,7 @@ a {
 .list-content h1
 {
   font-style: bold;
-  font-size: 160%;
+  font-size: 100%;
   font-family: 'century gothic', arial, sans-serif;
 	
   /*border-style: solid;
@@ -195,18 +195,18 @@ a {
 	text-align: center;
 	height: initial;
 	
-        border-style: solid;
+        /*border-style: solid;
         border-width: 2px;
-        border-color: blue;
+        border-color: blue;*/
 }
 
 .list-right {
 	position: relative;
 	margin-left: 0px;
 	
-	border-style: solid;
+	/*border-style: solid;
         border-width: 2px;
-        border-color: green;
+        border-color: green;*/
 }
 
 .list-words {
