--- a/css/home.css
+++ b/css/home.css
@@ -159,12 +159,12 @@ a {
 .list-content h1
 {
   font-style: bold;
-  font-size: 60%;
+  font-size: 80%;
   font-family: 'century gothic', arial, sans-serif;
 	
-  /*border-style: solid;
+  border-style: solid;
   border-width: 2px;
-  border-color: green;*/
+  border-color: green;
  
   border-left: solid;
   border-width: 1px;
