--- a/css/home.css
+++ b/css/home.css
@@ -159,17 +159,17 @@ a {
 .list-content h1
 {
   font-style: bold;
-  font-size: 80%;
+  font-size: 100%;
   font-family: 'century gothic', arial, sans-serif;
 	
   border-style: solid;
   border-width: 2px;
   border-color: green;
  
-  border-left: solid;
+  /*border-left: solid;
   border-width: 1px;
   /*border-color: #e7e7e7;*/
-  border-color: #555;
+  border-color: #555;*/
 	
   background: #f5f5f5; 
 	
