--- a/css/home.css
+++ b/css/home.css
@@ -168,7 +168,7 @@ a {
  
   /*border-left: solid;
   border-width: 1px;
-  /*border-color: #e7e7e7;*/
+  border-color: #e7e7e7;
   border-color: #555;*/
 	
   background: #f5f5f5; 
