--- a/css/home.css
+++ b/css/home.css
@@ -162,14 +162,14 @@ a {
   font-size: 100%;
   font-family: 'century gothic', arial, sans-serif;
 	
-  border-style: solid;
+  /*border-style: solid;
   border-width: 2px;
-  border-color: green;
+  border-color: green;*/
  
-  /*border-left: solid;
+  border-left: solid;
   border-width: 1px;
-  border-color: #e7e7e7;
-  border-color: #555;*/
+  /*border-color: #e7e7e7;*/
+  border-color: #555;
 	
   background: #f5f5f5; 
 	
