--- a/css/home.css
+++ b/css/home.css
@@ -195,9 +195,9 @@ a {
 	text-align: center;
 	height: initial;
 	
-        /*border-style: solid;
+        border-style: solid;
         border-width: 2px;
-        border-color: blue;*/
+        border-color: blue;
 }
 
 .list-right {
