--- a/css/home.css
+++ b/css/home.css
@@ -204,9 +204,9 @@ a {
 	position: relative;
 	margin-left: 0px;
 	
-	/*border-style: solid;
+	border-style: solid;
         border-width: 2px;
-        border-color: green;*/
+        border-color: green;
 }
 
 .list-words {
