--- a/css/home.css
+++ b/css/home.css
@@ -171,7 +171,7 @@ a {
   /*border-color: #e7e7e7;*/
   border-color: #555;
 	
-  background: #f5f5f5; 
+  background: #DCDCDC; /* f5f5f5*/
 	
   margin-top: 20px;
   margin-right: 0px;
