--- a/css/home.css
+++ b/css/home.css
@@ -646,9 +646,9 @@ p.gallery
   vertical-align: middle;
   width: 25%;
   border:1px solid #ccc;
-  padding: 1%;
+  padding: 5px;
   box-shadow:2px 2px 3px #ccc;
-  margin-right:2%;
+  margin-right:2px;
 }
 
 .pub-text
