--- a/css/home.css
+++ b/css/home.css
@@ -648,13 +648,14 @@ p.gallery
   border:1px solid #ccc;
   padding: 5px;
   box-shadow:2px 2px 3px #ccc;
-  margin-right:2px;
+  margin-right:10px;
 }
 
 .pub-text
 {
   display: inline-block;
   vertical-align: middle;
+  margin-left:10px;
   width: 70%;
 }
 
