--- a/css/home.css
+++ b/css/home.css
@@ -658,9 +658,9 @@ p.gallery
   margin-left:10px;
   width: 70%;
 	
-  padding-top: 10px;
+  padding-top: 5px;
   padding-right: 0px;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
   padding-left: 0px;
 }
 
@@ -668,6 +668,11 @@ p.gallery
 { 
   font: normal 100% 'century gothic', arial;
   color: #000;
+	
+  padding-top: 5px;
+  padding-right: 0px;
+  padding-bottom: 5px;
+  padding-left: 0px;
 }
 
 .pub-text h3
