--- a/css/home.css
+++ b/css/home.css
@@ -678,9 +678,19 @@ p.gallery
 .pub-text h3
 {
    font: bold 100% 'century gothic', arial;
+	
+  padding-top: 5px;
+  padding-right: 0px;
+  padding-bottom: 5px;
+  padding-left: 0px;
 }
 
 .pub-text p
 {
    font: normal 85% 'century gothic', arial;
+	
+  padding-top: 0px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
 }
