--- a/css/home.css
+++ b/css/home.css
@@ -694,3 +694,77 @@ p.gallery
   padding-bottom: 0px;
   padding-left: 0px;
 }
+
+/* Contents */
+#contents
+{
+  /*display: block;*/
+	
+  /*border-style: solid;
+  border-width: 1px;
+  border-color: blue;*/
+	
+  width: 80%;
+  background: #FFF;
+  min-width: 500px;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding-top: 10px;
+  padding-right: 0px;
+  padding-bottom: 10px;
+  padding-left: 0px;
+  text-align: justify;
+}
+
+/* Contents h1 header */
+#contents h1
+{
+  font-style: bold;
+  font-size: 160%;
+  font-family: 'century gothic', arial, sans-serif;
+	
+  /*border-style: solid;
+  border-width: 2px;
+  border-color: green;*/
+ 
+  border-left: solid;
+  border-width: 1px;
+  /*border-color: #e7e7e7;*/
+  border-color: #555;
+	
+  background: #f5f5f5; 
+	
+  margin-top: 20px;
+  margin-right: 0px;
+  margin-bottom: 10px;
+  margin-left: 0px;
+	
+  padding-top: 10px;
+  padding-right: 3px;
+  padding-bottom: 10px;
+  padding-left: 8px;
+	
+  color: #595959;
+}
+
+/* News list */
+#ul.news 
+{
+  list-style-type: square;
+  
+  border-style: solid;
+  border-width: 1px;
+  border-color: red;
+  
+  list-style-position: outside;
+  
+  margin-top: 10px;
+  margin-right: 0px;
+  margin-bottom: 20px;
+  margin-left: 0px;
+	
+  padding-top: 0px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+ }
