--- a/css/home.css
+++ b/css/home.css
@@ -704,7 +704,7 @@ p.gallery
   border-width: 1px;
   border-color: blue;*/
 	
-  width: 100%;
+  width: 900px;
   background: #FFF;
   min-width: 500px;
   max-width: 1000px;
