--- a/css/home.css
+++ b/css/home.css
@@ -700,9 +700,9 @@ p.gallery
 {
   /*display: block;*/
 	
-  border-style: solid;
+  /*border-style: solid;
   border-width: 1px;
-  border-color: blue;
+  border-color: blue;*/
 	
   width: 900px;
   background: #FFF;
